--- a/archives/toutiao-search/2024-03-28.md
+++ b/archives/toutiao-search/2024-03-28.md
@@ -1,49 +1,67 @@
 # 2024-03-28
 
-共 345 条
+共 360 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Mar 28 2024 22:00:47 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Mar 28 2024 23:00:57 GMT+0800 (China Standard Time) -->
 1. [小米SU7起售价21.59万](https://so.toutiao.com/search?keyword=小米SU7起售价21.59万)
-1. [李铁出庭受审时仍留着标志性刘海](https://so.toutiao.com/search?keyword=李铁出庭受审时仍留着标志性刘海)
+1. [李铁庭审超11小时](https://so.toutiao.com/search?keyword=李铁庭审超11小时)
 1. [有一种叫云南的生活](https://so.toutiao.com/search?keyword=有一种叫云南的生活)
-1. [何小鹏曾说小米SU7卖便宜是不对的](https://so.toutiao.com/search?keyword=何小鹏曾说小米SU7卖便宜是不对的)
-1. [博主：李铁至少在三个国家有房产](https://so.toutiao.com/search?keyword=博主：李铁至少在三个国家有房产)
-1. [男孩被外公逼问吃不吃后连挨数巴掌](https://so.toutiao.com/search?keyword=男孩被外公逼问吃不吃后连挨数巴掌)
-1. [雷军：小米汽车续航遥遥领先](https://so.toutiao.com/search?keyword=雷军：小米汽车续航遥遥领先)
+1. [雷军：小米总有一天超过保时捷](https://so.toutiao.com/search?keyword=雷军：小米总有一天超过保时捷)
+1. [长城董事长和雷军互赠新车](https://so.toutiao.com/search?keyword=长城董事长和雷军互赠新车)
 1. [涉案超1亿！李铁受审](https://so.toutiao.com/search?keyword=涉案超1亿！李铁受审)
 1. [国防部：决不许台湾从祖国分裂出去](https://so.toutiao.com/search?keyword=国防部：决不许台湾从祖国分裂出去)
+1. [小米汽车SU7共有9种外观颜色](https://so.toutiao.com/search?keyword=小米汽车SU7共有9种外观颜色)
+1. [成都一社区210块共享菜地被秒抢光](https://so.toutiao.com/search?keyword=成都一社区210块共享菜地被秒抢光)
 1. [王婆直播连线涂磊回应爆火](https://so.toutiao.com/search?keyword=王婆直播连线涂磊回应爆火)
-1. [长城董事长和雷军互赠新车](https://so.toutiao.com/search?keyword=长城董事长和雷军互赠新车)
+1. [雷军：小米汽车续航遥遥领先](https://so.toutiao.com/search?keyword=雷军：小米汽车续航遥遥领先)
 1. [“京沪高速公路停止收费”是谣言](https://so.toutiao.com/search?keyword=“京沪高速公路停止收费”是谣言)
-1. [李铁庭审超11小时](https://so.toutiao.com/search?keyword=李铁庭审超11小时)
+1. [吴磊拒绝站蒋勤勤和陈建斌中间](https://so.toutiao.com/search?keyword=吴磊拒绝站蒋勤勤和陈建斌中间)
+1. [何小鹏曾说小米SU7卖便宜是不对的](https://so.toutiao.com/search?keyword=何小鹏曾说小米SU7卖便宜是不对的)
+1. [订婚强奸案为何民事开庭直接败诉](https://so.toutiao.com/search?keyword=订婚强奸案为何民事开庭直接败诉)
+1. [五种“难吃”蔬菜实际是营养高手](https://so.toutiao.com/search?keyword=五种“难吃”蔬菜实际是营养高手)
+1. [探访小米SU7门店实车](https://so.toutiao.com/search?keyword=探访小米SU7门店实车)
+1. [民警追回500万 男子送9面锦旗感谢](https://so.toutiao.com/search?keyword=民警追回500万+男子送9面锦旗感谢)
+1. [男孩被外公逼问吃不吃后连挨数巴掌](https://so.toutiao.com/search?keyword=男孩被外公逼问吃不吃后连挨数巴掌)
+1. [雷军：小米SU7将支持iPad上车](https://so.toutiao.com/search?keyword=雷军：小米SU7将支持iPad上车)
+1. [李铁出庭受审时仍留着标志性刘海](https://so.toutiao.com/search?keyword=李铁出庭受审时仍留着标志性刘海)
+1. [儿子拿整蛊玩具跟爸爸玩被一眼识破](https://so.toutiao.com/search?keyword=儿子拿整蛊玩具跟爸爸玩被一眼识破)
 1. [雷军：小米汽车配手机支架](https://so.toutiao.com/search?keyword=雷军：小米汽车配手机支架)
-1. [雷军：小米总有一天超过保时捷](https://so.toutiao.com/search?keyword=雷军：小米总有一天超过保时捷)
-1. [《与凤行》沈璃行止又同居了](https://so.toutiao.com/search?keyword=《与凤行》沈璃行止又同居了)
+1. [博主：李铁至少在三个国家有房产](https://so.toutiao.com/search?keyword=博主：李铁至少在三个国家有房产)
+1. [男子中5581万彩票1个月后才核对](https://so.toutiao.com/search?keyword=男子中5581万彩票1个月后才核对)
+1. [雷军：现在造车比当年造手机容易](https://so.toutiao.com/search?keyword=雷军：现在造车比当年造手机容易)
+1. [律师称李铁判死缓可能性极大](https://so.toutiao.com/search?keyword=律师称李铁判死缓可能性极大)
+1. [胖东来董事长：不要过度服务](https://so.toutiao.com/search?keyword=胖东来董事长：不要过度服务)
+1. [雷军：每76秒下线一台小米SU7](https://so.toutiao.com/search?keyword=雷军：每76秒下线一台小米SU7)
+1. [李铁名场面回顾：国产教练怎么了](https://so.toutiao.com/search?keyword=李铁名场面回顾：国产教练怎么了)
+1. [新能源车轮胎过热 司机狂浇矿泉水](https://so.toutiao.com/search?keyword=新能源车轮胎过热+司机狂浇矿泉水)
+1. [小米汽车7分钟大定破2万](https://so.toutiao.com/search?keyword=小米汽车7分钟大定破2万)
+1. [中国女留学生在英国被刺身亡](https://so.toutiao.com/search?keyword=中国女留学生在英国被刺身亡)
+1. [《让子弹飞》原著作者马识途去世](https://so.toutiao.com/search?keyword=《让子弹飞》原著作者马识途去世)
+1. [恒大汽车去年收入13.4亿元](https://so.toutiao.com/search?keyword=恒大汽车去年收入13.4亿元)
+1. [3分钟回顾雷军造车史](https://so.toutiao.com/search?keyword=3分钟回顾雷军造车史)
+1. [小伙存款百万来找王婆说媒](https://so.toutiao.com/search?keyword=小伙存款百万来找王婆说媒)
+1. [洪金宝获金像奖终身成就奖](https://so.toutiao.com/search?keyword=洪金宝获金像奖终身成就奖)
+1. [雷军：SU7零百加速最快2.78秒](https://so.toutiao.com/search?keyword=雷军：SU7零百加速最快2.78秒)
+1. [香港女歌手黎明诗去世](https://so.toutiao.com/search?keyword=香港女歌手黎明诗去世)
+1. [湖人落后太阳和国王1.5个胜场](https://so.toutiao.com/search?keyword=湖人落后太阳和国王1.5个胜场)
+1. [多家新能源车企欢迎小米入场](https://so.toutiao.com/search?keyword=多家新能源车企欢迎小米入场)
+1. [菲律宾前总统：中国对我们非常重要](https://so.toutiao.com/search?keyword=菲律宾前总统：中国对我们非常重要)
+1. [王新伟已任辽宁省委副书记](https://so.toutiao.com/search?keyword=王新伟已任辽宁省委副书记)
+1. [“订婚强奸案”男方：诉讼目的达到](https://so.toutiao.com/search?keyword=“订婚强奸案”男方：诉讼目的达到)
 1. [李想李斌等人现场为小米汽车捧场](https://so.toutiao.com/search?keyword=李想李斌等人现场为小米汽车捧场)
+1. [美财政部长怪中国东西太便宜](https://so.toutiao.com/search?keyword=美财政部长怪中国东西太便宜)
+1. [男子点3个技师陪打牌不给钱被刑拘](https://so.toutiao.com/search?keyword=男子点3个技师陪打牌不给钱被刑拘)
+1. [美国彩票开出11.3亿美元头奖](https://so.toutiao.com/search?keyword=美国彩票开出11.3亿美元头奖)
+1. [雷军：不谈配置谈定价是耍流氓](https://so.toutiao.com/search?keyword=雷军：不谈配置谈定价是耍流氓)
+1. [《与凤行》沈璃行止又同居了](https://so.toutiao.com/search?keyword=《与凤行》沈璃行止又同居了)
 1. [李铁押解车辆驶入法院画面曝光](https://so.toutiao.com/search?keyword=李铁押解车辆驶入法院画面曝光)
 1. [专家解读韩国频繁出现罢工活动](https://so.toutiao.com/search?keyword=专家解读韩国频繁出现罢工活动)
-1. [探访小米SU7门店实车](https://so.toutiao.com/search?keyword=探访小米SU7门店实车)
-1. [律师称李铁判死缓可能性极大](https://so.toutiao.com/search?keyword=律师称李铁判死缓可能性极大)
-1. [吴磊拒绝站蒋勤勤和陈建斌中间](https://so.toutiao.com/search?keyword=吴磊拒绝站蒋勤勤和陈建斌中间)
-1. [雷军：现在造车比当年造手机容易](https://so.toutiao.com/search?keyword=雷军：现在造车比当年造手机容易)
-1. [李铁名场面回顾：国产教练怎么了](https://so.toutiao.com/search?keyword=李铁名场面回顾：国产教练怎么了)
-1. [恒大汽车去年收入13.4亿元](https://so.toutiao.com/search?keyword=恒大汽车去年收入13.4亿元)
-1. [订婚强奸案为何民事开庭直接败诉](https://so.toutiao.com/search?keyword=订婚强奸案为何民事开庭直接败诉)
-1. [中国女留学生在英国被刺身亡](https://so.toutiao.com/search?keyword=中国女留学生在英国被刺身亡)
 1. [《让子弹飞》原作者马识途去世](https://so.toutiao.com/search?keyword=《让子弹飞》原作者马识途去世)
-1. [菲律宾前总统：中国对我们非常重要](https://so.toutiao.com/search?keyword=菲律宾前总统：中国对我们非常重要)
-1. [男子点3个技师陪打牌不给钱被刑拘](https://so.toutiao.com/search?keyword=男子点3个技师陪打牌不给钱被刑拘)
-1. [雷军：不谈配置谈定价是耍流氓](https://so.toutiao.com/search?keyword=雷军：不谈配置谈定价是耍流氓)
-1. [成都一社区210块共享菜地被秒抢光](https://so.toutiao.com/search?keyword=成都一社区210块共享菜地被秒抢光)
 1. [藏南地区自古就是中国领土](https://so.toutiao.com/search?keyword=藏南地区自古就是中国领土)
-1. [雷军：小米SU7将支持iPad上车](https://so.toutiao.com/search?keyword=雷军：小米SU7将支持iPad上车)
-1. [香港女歌手黎明诗去世](https://so.toutiao.com/search?keyword=香港女歌手黎明诗去世)
 1. [律师解读“碰碎玉镯遭索赔5000元”](https://so.toutiao.com/search?keyword=律师解读“碰碎玉镯遭索赔5000元”)
 1. [中国冥币在海外售价为国内32倍](https://so.toutiao.com/search?keyword=中国冥币在海外售价为国内32倍)
 1. [陈建斌夸吴磊像莱昂纳多](https://so.toutiao.com/search?keyword=陈建斌夸吴磊像莱昂纳多)
-1. [胖东来董事长：不要过度服务](https://so.toutiao.com/search?keyword=胖东来董事长：不要过度服务)
-1. [多家新能源车企欢迎小米入场](https://so.toutiao.com/search?keyword=多家新能源车企欢迎小米入场)
 1. [国防部：台方须就撞船事件给出交代](https://so.toutiao.com/search?keyword=国防部：台方须就撞船事件给出交代)
 1. [养老金并轨后体制内还“香”吗](https://so.toutiao.com/search?keyword=养老金并轨后体制内还“香”吗)
 1. [“王婆说媒”为啥突然就火了](https://so.toutiao.com/search?keyword=“王婆说媒”为啥突然就火了)
@@ -53,18 +71,15 @@
 1. [曹云金正面回应给郭德纲刷礼物](https://so.toutiao.com/search?keyword=曹云金正面回应给郭德纲刷礼物)
 1. [李雪琴恋情曝光](https://so.toutiao.com/search?keyword=李雪琴恋情曝光)
 1. [女子结婚后感谢王婆说媒](https://so.toutiao.com/search?keyword=女子结婚后感谢王婆说媒)
-1. [男子中5581万彩票1个月后才核对](https://so.toutiao.com/search?keyword=男子中5581万彩票1个月后才核对)
 1. [涉案超1亿！国足原主帅李铁受审](https://so.toutiao.com/search?keyword=涉案超1亿！国足原主帅李铁受审)
 1. [小米SU7售价公布](https://so.toutiao.com/search?keyword=小米SU7售价公布)
 1. [何小鹏：小米SU7卖便宜是不对的](https://so.toutiao.com/search?keyword=何小鹏：小米SU7卖便宜是不对的)
 1. [雷军：造车三年最大的感受是太难了](https://so.toutiao.com/search?keyword=雷军：造车三年最大的感受是太难了)
 1. [官方回应未满12岁男孩杀4岁女童](https://so.toutiao.com/search?keyword=官方回应未满12岁男孩杀4岁女童)
-1. [美财政部长怪中国东西太便宜](https://so.toutiao.com/search?keyword=美财政部长怪中国东西太便宜)
 1. [藏南地区自古以来就是中国领土](https://so.toutiao.com/search?keyword=藏南地区自古以来就是中国领土)
 1. [13岁男孩杀8岁女童 嫌犯已羁押](https://so.toutiao.com/search?keyword=13岁男孩杀8岁女童+嫌犯已羁押)
 1. [俄妇女“表白”普京：我等了您20年](https://so.toutiao.com/search?keyword=俄妇女“表白”普京：我等了您20年)
 1. [台军特种部队士官拍摄多部性爱视频](https://so.toutiao.com/search?keyword=台军特种部队士官拍摄多部性爱视频)
-1. [“订婚强奸案”男方：诉讼目的达到](https://so.toutiao.com/search?keyword=“订婚强奸案”男方：诉讼目的达到)
 1. [普京：中国人阅读时间世界第一](https://so.toutiao.com/search?keyword=普京：中国人阅读时间世界第一)
 1. [国防部：哪来什么“阿鲁纳恰尔邦”](https://so.toutiao.com/search?keyword=国防部：哪来什么“阿鲁纳恰尔邦”)
 1. [雷军：小米造车将是我最后一次创业](https://so.toutiao.com/search?keyword=雷军：小米造车将是我最后一次创业)
