--- a/archives/toutiao-search/2024-03-29.md
+++ b/archives/toutiao-search/2024-03-29.md
@@ -1,51 +1,68 @@
 # 2024-03-29
 
-共 105 条
+共 114 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Mar 29 2024 07:00:54 GMT+0800 (China Standard Time) -->
-1. [小米SU7起售价21.59万](https://so.toutiao.com/search?keyword=小米SU7起售价21.59万)
-1. [何小鹏曾说小米SU7卖便宜是不对的](https://so.toutiao.com/search?keyword=何小鹏曾说小米SU7卖便宜是不对的)
+<!-- 最后更新时间 Fri Mar 29 2024 08:25:26 GMT+0800 (China Standard Time) -->
+1. [小米SU7订单4分钟破万 创始版售罄](https://so.toutiao.com/search?keyword=小米SU7订单4分钟破万+创始版售罄)
+1. [发传单推荐网课副教授一夜涨粉30万](https://so.toutiao.com/search?keyword=发传单推荐网课副教授一夜涨粉30万)
 1. [有一种叫云南的生活](https://so.toutiao.com/search?keyword=有一种叫云南的生活)
+1. [小米SU7起售价21.59万](https://so.toutiao.com/search?keyword=小米SU7起售价21.59万)
+1. [老太被撞身亡 男子报警反成嫌疑人](https://so.toutiao.com/search?keyword=老太被撞身亡+男子报警反成嫌疑人)
+1. [常驻联合国代表张军即将离任回国](https://so.toutiao.com/search?keyword=常驻联合国代表张军即将离任回国)
+1. [何小鹏曾说小米SU7卖便宜是不对的](https://so.toutiao.com/search?keyword=何小鹏曾说小米SU7卖便宜是不对的)
+1. [律师解读“碰碎玉镯遭索赔5000元”](https://so.toutiao.com/search?keyword=律师解读“碰碎玉镯遭索赔5000元”)
 1. [李铁庭审超11小时](https://so.toutiao.com/search?keyword=李铁庭审超11小时)
-1. [小米汽车SU7共有9种外观颜色](https://so.toutiao.com/search?keyword=小米汽车SU7共有9种外观颜色)
-1. [荷兰首相在华回应ASML出口管制问题](https://so.toutiao.com/search?keyword=荷兰首相在华回应ASML出口管制问题)
-1. [陈戌源曾劝李铁退还4800万遭拒绝](https://so.toutiao.com/search?keyword=陈戌源曾劝李铁退还4800万遭拒绝)
-1. [长城董事长和雷军互赠新车](https://so.toutiao.com/search?keyword=长城董事长和雷军互赠新车)
-1. [“订婚强奸案”彩礼纠纷案一审宣判](https://so.toutiao.com/search?keyword=“订婚强奸案”彩礼纠纷案一审宣判)
-1. [王婆直播连线涂磊回应爆火](https://so.toutiao.com/search?keyword=王婆直播连线涂磊回应爆火)
-1. [雷军：每76秒下线一台小米SU7](https://so.toutiao.com/search?keyword=雷军：每76秒下线一台小米SU7)
+1. [小米SU7实测](https://so.toutiao.com/search?keyword=小米SU7实测)
+1. [河南一小区出门就是墓地](https://so.toutiao.com/search?keyword=河南一小区出门就是墓地)
 1. [“京沪高速公路停止收费”是谣言](https://so.toutiao.com/search?keyword=“京沪高速公路停止收费”是谣言)
+1. [长城董事长和雷军互赠新车](https://so.toutiao.com/search?keyword=长城董事长和雷军互赠新车)
+1. [雷军：不谈配置谈定价是耍流氓](https://so.toutiao.com/search?keyword=雷军：不谈配置谈定价是耍流氓)
 1. [涉案超1亿！李铁受审](https://so.toutiao.com/search?keyword=涉案超1亿！李铁受审)
 1. [小米汽车27分钟大定破5万台](https://so.toutiao.com/search?keyword=小米汽车27分钟大定破5万台)
-1. [律师解读“碰碎玉镯遭索赔5000元”](https://so.toutiao.com/search?keyword=律师解读“碰碎玉镯遭索赔5000元”)
-1. [菲律宾前总统：中国对我们非常重要](https://so.toutiao.com/search?keyword=菲律宾前总统：中国对我们非常重要)
-1. [雷军：小米汽车配手机支架](https://so.toutiao.com/search?keyword=雷军：小米汽车配手机支架)
-1. [李铁押解车辆驶入法院画面曝光](https://so.toutiao.com/search?keyword=李铁押解车辆驶入法院画面曝光)
-1. [农贸市场开张仅5天接到拆除通知](https://so.toutiao.com/search?keyword=农贸市场开张仅5天接到拆除通知)
-1. [雷军：现在造车比当年造手机容易](https://so.toutiao.com/search?keyword=雷军：现在造车比当年造手机容易)
+1. [“订婚强奸案”彩礼纠纷案一审宣判](https://so.toutiao.com/search?keyword=“订婚强奸案”彩礼纠纷案一审宣判)
+1. [健身碰碎他人玉镯遭索赔5000](https://so.toutiao.com/search?keyword=健身碰碎他人玉镯遭索赔5000)
+1. [雷军：每76秒下线一台小米SU7](https://so.toutiao.com/search?keyword=雷军：每76秒下线一台小米SU7)
+1. [主持人：禁售冥币不见得是荒谬规定](https://so.toutiao.com/search?keyword=主持人：禁售冥币不见得是荒谬规定)
 1. [李铁出庭受审时仍留着标志性刘海](https://so.toutiao.com/search?keyword=李铁出庭受审时仍留着标志性刘海)
+1. [小米汽车SU7共有9种外观颜色](https://so.toutiao.com/search?keyword=小米汽车SU7共有9种外观颜色)
+1. [专家谈马英九访陆：为寻根 为和平](https://so.toutiao.com/search?keyword=专家谈马英九访陆：为寻根+为和平)
+1. [博主：李铁至少在三个国家有房产](https://so.toutiao.com/search?keyword=博主：李铁至少在三个国家有房产)
+1. [雷军：现在造车比当年造手机容易](https://so.toutiao.com/search?keyword=雷军：现在造车比当年造手机容易)
+1. [菲律宾前总统：中国对我们非常重要](https://so.toutiao.com/search?keyword=菲律宾前总统：中国对我们非常重要)
+1. [律师称李铁判死缓可能性极大](https://so.toutiao.com/search?keyword=律师称李铁判死缓可能性极大)
+1. [雷军现场感谢蔚来小鹏理想董事长](https://so.toutiao.com/search?keyword=雷军现场感谢蔚来小鹏理想董事长)
+1. [曹云金正面回应给郭德纲刷礼物](https://so.toutiao.com/search?keyword=曹云金正面回应给郭德纲刷礼物)
+1. [李铁名场面回顾：国产教练怎么了](https://so.toutiao.com/search?keyword=李铁名场面回顾：国产教练怎么了)
+1. [雷军：小米汽车配手机支架](https://so.toutiao.com/search?keyword=雷军：小米汽车配手机支架)
+1. [荷兰首相在华回应ASML出口管制问题](https://so.toutiao.com/search?keyword=荷兰首相在华回应ASML出口管制问题)
+1. [《让子弹飞》原著作者马识途去世](https://so.toutiao.com/search?keyword=《让子弹飞》原著作者马识途去世)
+1. [雷军：小米SU7将支持iPad上车](https://so.toutiao.com/search?keyword=雷军：小米SU7将支持iPad上车)
+1. [订婚强奸案为何民事开庭直接败诉](https://so.toutiao.com/search?keyword=订婚强奸案为何民事开庭直接败诉)
+1. [陈戌源曾劝李铁退还4800万遭拒绝](https://so.toutiao.com/search?keyword=陈戌源曾劝李铁退还4800万遭拒绝)
+1. [雷军全程diss特斯拉Model 3](https://so.toutiao.com/search?keyword=雷军全程diss特斯拉Model+3)
+1. [美国铁桥被巨轮撞塌前的绝望4分钟](https://so.toutiao.com/search?keyword=美国铁桥被巨轮撞塌前的绝望4分钟)
+1. [李铁押解车辆驶入法院画面曝光](https://so.toutiao.com/search?keyword=李铁押解车辆驶入法院画面曝光)
+1. [吴磊拒绝站蒋勤勤和陈建斌中间](https://so.toutiao.com/search?keyword=吴磊拒绝站蒋勤勤和陈建斌中间)
+1. [小孩哥收集烟卡全被狠妈剪了](https://so.toutiao.com/search?keyword=小孩哥收集烟卡全被狠妈剪了)
+1. [厦门一小区2名工人装防盗网时坠亡](https://so.toutiao.com/search?keyword=厦门一小区2名工人装防盗网时坠亡)
+1. [爆破员违规用微信沟通看错指令致3死](https://so.toutiao.com/search?keyword=爆破员违规用微信沟通看错指令致3死)
+1. [养老金并轨后体制内还“香”吗](https://so.toutiao.com/search?keyword=养老金并轨后体制内还“香”吗)
+1. [陈建斌路演遭“贴脸开大”](https://so.toutiao.com/search?keyword=陈建斌路演遭“贴脸开大”)
+1. [李雪琴恋情曝光](https://so.toutiao.com/search?keyword=李雪琴恋情曝光)
+1. [阿来怀念马识途：马老是一个榜样](https://so.toutiao.com/search?keyword=阿来怀念马识途：马老是一个榜样)
+1. [香港女歌手黎明诗去世](https://so.toutiao.com/search?keyword=香港女歌手黎明诗去世)
+1. [微短剧头部女演员讲述自己拍剧之路](https://so.toutiao.com/search?keyword=微短剧头部女演员讲述自己拍剧之路)
+1. [转人工客服困难 用英语秒接通](https://so.toutiao.com/search?keyword=转人工客服困难+用英语秒接通)
+1. [王婆直播连线涂磊回应爆火](https://so.toutiao.com/search?keyword=王婆直播连线涂磊回应爆火)
+1. [农贸市场开张仅5天接到拆除通知](https://so.toutiao.com/search?keyword=农贸市场开张仅5天接到拆除通知)
 1. [港媒：马英九再访大陆具有4大意义](https://so.toutiao.com/search?keyword=港媒：马英九再访大陆具有4大意义)
 1. [雷军：SU7零百加速最快2.78秒](https://so.toutiao.com/search?keyword=雷军：SU7零百加速最快2.78秒)
-1. [博主：李铁至少在三个国家有房产](https://so.toutiao.com/search?keyword=博主：李铁至少在三个国家有房产)
 1. [莫斯科恐袭发生后普京一夜没合眼](https://so.toutiao.com/search?keyword=莫斯科恐袭发生后普京一夜没合眼)
-1. [订婚强奸案为何民事开庭直接败诉](https://so.toutiao.com/search?keyword=订婚强奸案为何民事开庭直接败诉)
-1. [律师称李铁判死缓可能性极大](https://so.toutiao.com/search?keyword=律师称李铁判死缓可能性极大)
-1. [李雪琴恋情曝光](https://so.toutiao.com/search?keyword=李雪琴恋情曝光)
-1. [健身碰碎他人玉镯遭索赔5000](https://so.toutiao.com/search?keyword=健身碰碎他人玉镯遭索赔5000)
-1. [李铁名场面回顾：国产教练怎么了](https://so.toutiao.com/search?keyword=李铁名场面回顾：国产教练怎么了)
-1. [《让子弹飞》原著作者马识途去世](https://so.toutiao.com/search?keyword=《让子弹飞》原著作者马识途去世)
-1. [雷军：不谈配置谈定价是耍流氓](https://so.toutiao.com/search?keyword=雷军：不谈配置谈定价是耍流氓)
-1. [主持人：禁售冥币不见得是荒谬规定](https://so.toutiao.com/search?keyword=主持人：禁售冥币不见得是荒谬规定)
-1. [爆破员违规用微信沟通看错指令致3死](https://so.toutiao.com/search?keyword=爆破员违规用微信沟通看错指令致3死)
 1. [美财政部长怪中国东西太便宜](https://so.toutiao.com/search?keyword=美财政部长怪中国东西太便宜)
-1. [养老金并轨后体制内还“香”吗](https://so.toutiao.com/search?keyword=养老金并轨后体制内还“香”吗)
 1. [男孩被外公逼问吃不吃后连挨数巴掌](https://so.toutiao.com/search?keyword=男孩被外公逼问吃不吃后连挨数巴掌)
-1. [曹云金正面回应给郭德纲刷礼物](https://so.toutiao.com/search?keyword=曹云金正面回应给郭德纲刷礼物)
 1. [曝奥巴马将直接加入拜登竞选活动](https://so.toutiao.com/search?keyword=曝奥巴马将直接加入拜登竞选活动)
 1. [高德地图两款个性化车标装饰收费](https://so.toutiao.com/search?keyword=高德地图两款个性化车标装饰收费)
-1. [美国铁桥被巨轮撞塌前的绝望4分钟](https://so.toutiao.com/search?keyword=美国铁桥被巨轮撞塌前的绝望4分钟)
-1. [微短剧头部女演员讲述自己拍剧之路](https://so.toutiao.com/search?keyword=微短剧头部女演员讲述自己拍剧之路)
 1. [首尔近98%的公交车罢工停运](https://so.toutiao.com/search?keyword=首尔近98%的公交车罢工停运)
 1. [“王婆说媒”为啥突然就火了](https://so.toutiao.com/search?keyword=“王婆说媒”为啥突然就火了)
 1. [足协原主席陈戌源为立功揭发了谁](https://so.toutiao.com/search?keyword=足协原主席陈戌源为立功揭发了谁)
@@ -53,8 +70,6 @@
 1. [台湾查出日本秋刀鱼致癌物超标40倍](https://so.toutiao.com/search?keyword=台湾查出日本秋刀鱼致癌物超标40倍)
 1. [探访小米SU7门店实车](https://so.toutiao.com/search?keyword=探访小米SU7门店实车)
 1. [姜文悼念马识途](https://so.toutiao.com/search?keyword=姜文悼念马识途)
-1. [厦门一小区2名工人装防盗网时坠亡](https://so.toutiao.com/search?keyword=厦门一小区2名工人装防盗网时坠亡)
-1. [香港女歌手黎明诗去世](https://so.toutiao.com/search?keyword=香港女歌手黎明诗去世)
 1. [李铁行贿4205万仅自掏腰包100万](https://so.toutiao.com/search?keyword=李铁行贿4205万仅自掏腰包100万)
 1. [中印双方积极评价边境局势管控进展](https://so.toutiao.com/search?keyword=中印双方积极评价边境局势管控进展)
 1. [“订婚强奸案”男方：诉讼目的达到](https://so.toutiao.com/search?keyword=“订婚强奸案”男方：诉讼目的达到)
@@ -71,7 +86,6 @@
 1. [雷军：小米汽车续航遥遥领先](https://so.toutiao.com/search?keyword=雷军：小米汽车续航遥遥领先)
 1. [曝印度拟斥巨资在印缅边界筑边境墙](https://so.toutiao.com/search?keyword=曝印度拟斥巨资在印缅边界筑边境墙)
 1. [13岁男孩杀8岁女童 嫌犯已羁押](https://so.toutiao.com/search?keyword=13岁男孩杀8岁女童+嫌犯已羁押)
-1. [雷军：小米SU7将支持iPad上车](https://so.toutiao.com/search?keyword=雷军：小米SU7将支持iPad上车)
 1. [男子抱儿子从长城跌落消防赶赴救援](https://so.toutiao.com/search?keyword=男子抱儿子从长城跌落消防赶赴救援)
 1. [中荷就光刻机输华等议题交换意见](https://so.toutiao.com/search?keyword=中荷就光刻机输华等议题交换意见)
 1. [英军官批英国人加入俄军对抗乌克兰](https://so.toutiao.com/search?keyword=英军官批英国人加入俄军对抗乌克兰)
@@ -93,11 +107,8 @@
 1. [德国罢工结束达成35小时工作制协议](https://so.toutiao.com/search?keyword=德国罢工结束达成35小时工作制协议)
 1. [小米SU7车型56英寸HUD对焦距离7.7m](https://so.toutiao.com/search?keyword=小米SU7车型56英寸HUD对焦距离7.7m)
 1. [国防部：决不许台湾从祖国分裂出去](https://so.toutiao.com/search?keyword=国防部：决不许台湾从祖国分裂出去)
-1. [雷军全程diss特斯拉Model 3](https://so.toutiao.com/search?keyword=雷军全程diss特斯拉Model+3)
-1. [转人工客服困难 用英语秒接通](https://so.toutiao.com/search?keyword=转人工客服困难+用英语秒接通)
 1. [美国彩票开出11.3亿美元头奖](https://so.toutiao.com/search?keyword=美国彩票开出11.3亿美元头奖)
 1. [藏南地区自古就是中国领土](https://so.toutiao.com/search?keyword=藏南地区自古就是中国领土)
-1. [小孩哥收集烟卡全被狠妈剪了](https://so.toutiao.com/search?keyword=小孩哥收集烟卡全被狠妈剪了)
 1. [白敬亭红毯躲C位](https://so.toutiao.com/search?keyword=白敬亭红毯躲C位)
 1. [巴基斯坦已加强对中方人员保护力度](https://so.toutiao.com/search?keyword=巴基斯坦已加强对中方人员保护力度)
 1. [小米汽车家用充电桩售价3999元起](https://so.toutiao.com/search?keyword=小米汽车家用充电桩售价3999元起)
@@ -105,8 +116,6 @@
 1. [男子中5581万彩票1个月后才核对](https://so.toutiao.com/search?keyword=男子中5581万彩票1个月后才核对)
 1. [冯提莫游艇随拍](https://so.toutiao.com/search?keyword=冯提莫游艇随拍)
 1. [恒大汽车去年收入13.4亿元](https://so.toutiao.com/search?keyword=恒大汽车去年收入13.4亿元)
-1. [吴磊拒绝站蒋勤勤和陈建斌中间](https://so.toutiao.com/search?keyword=吴磊拒绝站蒋勤勤和陈建斌中间)
 1. [两人晋升上将](https://so.toutiao.com/search?keyword=两人晋升上将)
 1. [电梯维修工带纸片人冒充同事工作](https://so.toutiao.com/search?keyword=电梯维修工带纸片人冒充同事工作)
-1. [陈建斌路演遭“贴脸开大”](https://so.toutiao.com/search?keyword=陈建斌路演遭“贴脸开大”)
 <!-- END TOUTIAO -->
